Working Redhat init script.
With this update, the init script is now working on redhat linux.  The init script was adapted from an implementation noted in the script itself.  The process is now correctly identified after start, and shutdown kills the correct process.