@@ -2,8 +2,6 @@ grails.plugins.rpmBuild.http.hostname = "0.0.0.0"
 grails.plugins.rpmBuild.http.context  = "/"
 grails.plugins.rpmBuild.http.port     = "8080"
 grails.plugins.rpmBuild.java.version = 1.6
-grails.plugins.rpmBuild.java.xms = "1024m"
-grails.plugins.rpmBuild.java.xmx = "1256m"
-grails.plugins.rpmBuild.java.maxPermSize = "64m"
+grails.plugins.rpmBuild.java.opts = "-Xms512m -Xmx1024m -XX:MaxPermSize=128m -XX:+CMSClassUnloadingEnabled"
 
-grails.plugin.standalone.useJetty = true
+grails.plugins.standalone.useJetty = true
